# backend-csai-template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  test_bench.py  test_fallbacks.py  worker.Dockerfile
.github/workflows/: ci-cd.yml
app/: main.py  worker.py
app/api/: dependencies.py
app/core/: config.py  exceptions.py  logging.py  middleware.py  queue.py  redis.py  security.py
app/db/: base.py  base_class.py  checkpointer.py  session.py
app/models/: analytics.py  config.py  conversation.py  knowledge.py  product.py  user.py
app/schemas/: auth.py  common.py  config_schema.py  product_schema.py
app/services/: __init__.py  agent_orchestrator.py  analytics_controller.py  config_manager.py  knowledge_service.py  middlewares.py  models_manager.py  persona_manager.py  shopify_controller.py  telegram_service.py  websocket_manager.py
app/tools/: __init__.py  escalation_tools.py  guardrails.py  rag_tools.py  shopify_tools.py
app/utils/: network_retry.py
docs/: agent-design.md  api-spec.md  architecture.md  database-schema.md  deployment-guide.md  dokploy-guide.md  runbook.md
docs/frontend/: api-contract.md  authentication.md  error-codes.md  examples.md  pagination.md  permissions.md  state-machine.md  websocket-events.md
migrations/: env.py
migrations/versions/: 3c033e0c12d0_remove_unused_system_config_columns.py  4296fc775606_add_image_url_to_products.py  4f2ae5561031_add_source_id_and_fingerprint_to_.py  6abccd1b84c6_add_product_models_for_hybrid_rag.py  9b729343f757_add_sender_id_to_message.py  README  b49fc47a4511_add_webhook_secret_to_system_configs.py  b8f891f53531_db_optimization_indexes.py  dcac96f38c22_add_llm_token_logs_table.py  e0b61417aaf9_add_cost_tracking.py  ecd85b7e3e9f_initial_migration.py  f045fb665941_drop_mem0_tables.py
nginx/: nginx.conf
nginx/certs/: selfsigned.crt  selfsigned.key
prometheus/: prometheus.yml
scripts/: check_db.py  create_default_user.py  wipe_db.py
tests/: conftest.py
tests/api/: test_analytics.py  test_auth.py  test_entities.py  (+1 more)
(+16 files in other folders)
