[project]
name = "template-customer-service-ai"
version = "0.1.0"
description = "AI Customer Service Backend for Shopify Store (Single-Instance)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # --- FastAPI Stack ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",
    # --- Pydantic ---
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    # --- Security ---
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    # --- HTTP Client ---
    "httpx>=0.27.0",
    # --- Logging ---
    "structlog>=24.1.0",
    # --- LangGraph (Checkpointer Foundation) ---
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",
    # --- LangChain Core ---
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "langchain-text-splitters>=1.1.2",
    "langchain>=1.3.4",
    "streamlit>=1.58.0",
    "langchain-google-genai>=4.2.4",
    "langchain-ollama>=1.1.0",
    "langchain-groq>=0.2.1",
    "pypdf>=5.0.0",
    "openpyxl>=3.1.0",
    "locust>=2.44.3",
    "redis>=8.0.0",
    "arq>=0.25.0",
    "litellm>=1.88.1",
    "pybreaker>=1.4.1",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "langchain-openrouter>=0.2.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "black>=24.4.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx",  # for TestClient
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "migrations*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
